--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -70,7 +70,7 @@
       "title": "Desarrollo",
       "description": "Nuestros servicios de desarrollo ofrecen soluciones de primera categoría para crear software innovador, aplicaciones móviles y plataformas web que satisfagan las necesidades únicas de su negocio.",
       "subtitle": "SOLUCIONES EXPERTAS PARA SU NEGOCIO",
-      "copie": "Revolutionice su negocio con soluciones de desarrollo de vanguardia.",
+      "copie": "Renueve su negocio con soluciones de desarrollo de vanguardia.",
       "checks": "Web * E-commerce * Apps"
     },
     "marketing": {
